z-index form fix

--- a/webagency/www/css/style.css
+++ b/webagency/www/css/style.css
@@ -526,7 +526,7 @@ div.google-map-overlay {
 div.form-wrapper {
   position: absolute;
   right: 0;
-  z-index: 100;
+  z-index: 99;
   margin-top: -580px;
   margin-right: 150px;
   background: rgba(255, 255, 255, 0.6);
